[gd_scene load_steps=4 format=3 uid="uid://b2nitawiqkqd6"]

[ext_resource type="PackedScene" uid="uid://bbgyirclom8br" path="res://Scenes/Components/StatsPanel/statspanel.tscn" id="1_cdmrd"]
[ext_resource type="Script" path="res://Scenes/Screens/Main/main.gd" id="1_nvhvc"]
[ext_resource type="PackedScene" uid="uid://cduxrea4t11wg" path="res://Scenes/Components/Map/map.tscn" id="3_kbrkt"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nvhvc")

[node name="Map" parent="." instance=ExtResource("3_kbrkt")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GroupStats" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -772.0
offset_bottom = 130.0
grow_horizontal = 0
size_flags_horizontal = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Importation" parent="UI/GroupStats" instance=ExtResource("1_cdmrd")]
layout_mode = 2

[node name="Exportation" parent="UI/GroupStats" instance=ExtResource("1_cdmrd")]
layout_mode = 2

[node name="LocalNeed" parent="UI/GroupStats" instance=ExtResource("1_cdmrd")]
layout_mode = 2

[node name="LocalProduction" parent="UI/GroupStats" instance=ExtResource("1_cdmrd")]
layout_mode = 2
